--- a/index.html
+++ b/index.html
@@ -21,123 +21,123 @@
 
   <!-- ========== HEADER ========= -->
 
-  <header class="header">
-    <div class="container">
-      <nav class="nav-header">
-        <a class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
-        <ul class="nav-header">
-          <li class="focus-page"><a class="nav-header-item" href="./index.html">Agencja </a></li>
-          <li><a class="nav-header-item" href="./portfolio.html"> Portfolio </a></li>
-          <li><a class="nav-header-item" href="#"> Kontakt </a></li>
+  <header>
+    <div class="header">
+      <div class="menu">
+        <a class="logo--header" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+        <nav class="navigation">
+          <ul class="pages-navigation">
+            <li>
+              <a class="pages-navigation__item--active" href="./index.html">Agencja </a>
+            </li>
+            <li>
+              <a class="pages-navigation__item" href="./portfolio.html"> Portfolio </a>
+            </li>
+            <li>
+              <a class="pages-navigation__item" href="#"> Kontakt </a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contact-header">
+          <li>
+            <a class="contact-header__item" href="mailto:info@devstudio.com">
+              <svg class="contact-header__item" width="20" height="16">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
+          </li>
+          <li>
+            <a class="contact-header__item" href="tel:+48111111111">
+              <svg class="contact-header__item" width="16" height="20">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+              +48 111 111 111</a>
+          </li>
         </ul>
-      </nav>
-      <ul class="contacts">
-        <li>
-          <a class="contact-mail" href="mailto:info@devstudio.com">
-            <svg class="icon-contact" width="20" height="16">
-              <use href="./images/icons.svg#icon-envelope"></use>
-            </svg>
-            info@devstudio.com
-          </a>
-        </li>
-        <li>
-          <a class="contact-tel" href="tel:+48111111111">
-            <svg class="icon-contact" width="16" height="20">
-              <use href="./images/icons.svg#icon-phone"></use>
-            </svg>
-            +48 111 111 111</a>
-        </li>
-      </ul>
+      </div>
     </div>
   </header>
 
   <!-- ========== MAIN ========= -->
 
   <main>
-    <!-- ========== BANER ========= -->
-
     <section class="section-baner">
-      <div class="container">
-        <ul class="box-baner">
-          <li>
-            <h1 class="baner-text">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-          </li>
-          <li class="btn-baner">
-            <button class="btn-order" type="button" data-modal-open>Zamów usługę</button>
-          </li>
-        </ul>
-      </div>
+      <h1 class="baner-text">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+      <button class="btn-order" type="button" data-modal-open>Zamów usługę</button>
+
     </section>
 
     <!-- ========== FORM_ORDER ========= -->
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="btn-close" data-modal-close>
-          <svg class="icon-close">
+        <button class="modal__close-btn" data-modal-close>
+          <svg class="modal__close-icon">
             <use href="./images/icons.svg#icon-x"></use>
           </svg>
         </button>
 
-        <h2 class="window-header">
+        <h2 class="modal__header">
           Zostaw swoje dane w formularzu poniżej
         </h2>
-        <form class="form">
+        <form>
           <div class="modal-forms">
-            <div class="input-container">
-              <label class="modal-label" for="user-name">Imię
-                <svg class="icon-modal">
+            <label class="modal-forms__label" for="user-name">Imię
+              <span class="modal-forms__input-container">
+                <svg class="modal-forms__icon">
+
                   <use href="./images/icons.svg#icon-person-black"></use>
                 </svg>
-                <input class="modal-input" type="text" id="user-name" name="user-name" required />
-              </label>
-            </div>
-
-            <div class="input-container">
-              <label class="modal-label" for="user-phone">Telefon
-                <svg class="icon-modal">
-                  <use href="./images/icons.svg#icon-phone-2"></use>
-                </svg>
-                <input class="modal-input" type="text" id="user-phone" name="user-phone" required />
-              </label>
-            </div>
-
-            <div class="input-container">
-              <label class="modal-label" for="user-email">Email
-                <svg class="icon-modal">
-                  <use href="./images/icons.svg#icon-email-2"></use>
-                </svg>
-                <input class="modal-input" type="text" id="user-email" name="user-email" required />
-              </label>
-            </div>
-
-            <label for="comment" class="modal-label">Komentarz
-              <textarea name="user-comment" id="comment" class="modal-textarea" placeholder="Wprowadź tekst"></textarea>
-            </label>
-          </div>
-
-          <div class="checkbox-text">
-            <label for="checkbox" class="checkbox-label">
-              <span><input id="checkbox" type="checkbox" class="checkbox-input" name="regulations-acceptance"
-                  required />
-
-                <svg class="checkbox-svg">
-                  <use href="./images/icons.svg#unchecked"></use>
-                </svg>
-
-                <svg class="checkbox-svg">
-                  <use href="./images/icons.svg#checked"></use>
-                </svg>
-              </span>
-              <span class="acept">
-                Oświadczam iż akceptuję <a href="#">Regulamin</a> i
-                <a href="#">Politykę Prywatności.</a>
+                <input class="modal-forms-input" type="text" id="user-name" name="user-name" required />
               </span>
             </label>
           </div>
-          <button type="submit" class="btn-window">Wyślij</button>
-        </form>
+
+          <div class="input-container">
+            <label class="modal-label" for="user-phone">Telefon
+              <svg class="icon-modal">
+                <use href="./images/icons.svg#icon-phone-2"></use>
+              </svg>
+              <input class="modal-input" type="text" id="user-phone" name="user-phone" required />
+            </label>
+          </div>
+
+          <div class="input-container">
+            <label class="modal-label" for="user-email">Email
+              <svg class="icon-modal">
+                <use href="./images/icons.svg#icon-email-2"></use>
+              </svg>
+              <input class="modal-input" type="text" id="user-email" name="user-email" required />
+            </label>
+          </div>
+
+          <label for="comment" class="modal-label">Komentarz
+            <textarea name="user-comment" id="comment" class="modal-textarea" placeholder="Wprowadź tekst"></textarea>
+          </label>
       </div>
+
+      <div class="checkbox-text">
+        <label for="checkbox" class="checkbox-label">
+          <span><input id="checkbox" type="checkbox" class="checkbox-input" name="regulations-acceptance" required />
+
+            <svg class="checkbox-svg">
+              <use href="./images/icons.svg#unchecked"></use>
+            </svg>
+
+            <svg class="checkbox-svg">
+              <use href="./images/icons.svg#checked"></use>
+            </svg>
+          </span>
+          <span class="acept">
+            Oświadczam iż akceptuję <a href="#">Regulamin</a> i
+            <a href="#">Politykę Prywatności.</a>
+          </span>
+        </label>
+      </div>
+      <button type="submit" class="btn-window">Wyślij</button>
+      </form>
+    </div>
     </div>
 
 
@@ -228,7 +228,6 @@
 
     <section class="section-team">
       <div class="container">
-
         <h2>Nasz zespół</h2>
         <ul class="team-cards">
           <li>
