--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="pl">
-<!-- ========== HEAD_PORTFOLIO ========== -->
+<!-- ========== HEAD========== -->
 
 <head>
     <meta charset="UTF-8" />
@@ -93,13 +93,13 @@
             </li>
         </ul>
 
-        <!-- =============== CARDS ================  -->
+        <!-- =============== PRODUCTS ================  -->
 
-        <div class="portfolio-cards">
-            <figure class="portfolio-card">
-                <div class="portfolio-card__image">
+        <div class="portfolio-products">
+            <figure class="portfolio-product">
+                <div class="portfolio-product__image">
                     <img src="./images/img-post1.jpg" alt="Otwarta strona na ekranie laptopa" height="294" />
-                    <div class="portfolio-card__overlay">
+                    <div class="portfolio-product__overlay">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
                         do celów szpiegowskich i ataków na niezabezpieczone serwery
@@ -107,14 +107,14 @@
                     </div>
                 </div>
                 <figcaption>
-                    <h3 class="portfolio-card__name">Technocrack</h3>
-                    <p class="portfolio-card__category">Strona internetowa</p>
+                    <h3 class="portfolio-product__name">Technocrack</h3>
+                    <p class="portfolio-product__category">Strona internetowa</p>
                 </figcaption>
             </figure>
-            <figure class="portfolio-card">
-                <div class="portfolio-card__image">
+            <figure class="portfolio-product">
+                <div class="portfolio-product__image">
                     <img src="./images/img-post2.jpg" alt="Dwaj koszykarze walczący o piłkę" height="294" />
-                    <div class="portfolio-card__overlay">
+                    <div class="portfolio-product__overlay">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
                         do celów szpiegowskich i ataków na niezabezpieczone serwery
@@ -122,16 +122,16 @@
                     </div>
                 </div>
                 <figcaption>
-                    <h3 class="portfolio-card__name">
+                    <h3 class="portfolio-product__name">
                         Grafika New Orlean vs Golden Star
                     </h3>
-                    <p class="portfolio-card__category">Dizajn</p>
+                    <p class="portfolio-product__category">Dizajn</p>
                 </figcaption>
             </figure>
-            <figure class="portfolio-card">
-                <div class="portfolio-card__image">
+            <figure class="portfolio-product">
+                <div class="portfolio-product__image">
                     <img src="./images/img-post3.jpg" alt="Logo restauracji Seafood" height="294" />
-                    <div class="portfolio-card__overlay">
+                    <div class="portfolio-product__overlay">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
                         do celów szpiegowskich i ataków na niezabezpieczone serwery
@@ -139,14 +139,14 @@
                     </div>
                 </div>
                 <figcaption>
-                    <h3 class="portfolio-card__name">Restauracja Seafood</h3>
-                    <p class="portfolio-card__category">Aplikacja</p>
+                    <h3 class="portfolio-product__name">Restauracja Seafood</h3>
+                    <p class="portfolio-product__category">Aplikacja</p>
                 </figcaption>
             </figure>
-            <figure class="portfolio-card">
-                <div class="portfolio-card__image">
+            <figure class="portfolio-product">
+                <div class="portfolio-product__image">
                     <img src="./images/img-post4.jpg" alt="Słuchawki nauszne" height="294" />
-                    <div class="portfolio-card__overlay">
+                    <div class="portfolio-product__overlay">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
                         do celów szpiegowskich i ataków na niezabezpieczone serwery
@@ -154,14 +154,14 @@
                     </div>
                 </div>
                 <figcaption>
-                    <h3 class="portfolio-card__name">Projekt Prime</h3>
-                    <p class="portfolio-card__category">Marketing</p>
+                    <h3 class="portfolio-product__name">Projekt Prime</h3>
+                    <p class="portfolio-product__category">Marketing</p>
                 </figcaption>
             </figure>
-            <figure class="portfolio-card">
-                <div class="portfolio-card__image">
+            <figure class="portfolio-product">
+                <div class="portfolio-product__image">
                     <img src="./images/img-post5.jpg" alt="Dwa pudełka kartonowe" height="294" />
-                    <div class="portfolio-card__overlay">
+                    <div class="portfolio-product__overlay">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
                         do celów szpiegowskich i ataków na niezabezpieczone serwery
@@ -169,15 +169,15 @@
                     </div>
                 </div>
                 <figcaption>
-                    <h3 class="portfolio-card__name">Projekt Boxes</h3>
-                    <p class="portfolio-card__category">Aplikacja</p>
+                    <h3 class="portfolio-product__name">Projekt Boxes</h3>
+                    <p class="portfolio-product__category">Aplikacja</p>
                 </figcaption>
             </figure>
-            <figure class="portfolio-card">
-                <div class="portfolio-card__image">
+            <figure class="portfolio-product">
+                <div class="portfolio-product__image">
                     <img src="./images/img-post6.jpg" alt="Otwarta strona internetowa na szerokim ekranie"
                         height="294" />
-                    <div class="portfolio-card__overlay">
+                    <div class="portfolio-product__overlay">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
                         do celów szpiegowskich i ataków na niezabezpieczone serwery
@@ -185,14 +185,14 @@
                     </div>
                 </div>
                 <figcaption>
-                    <h3 class="portfolio-card__name">Inspiration has no Borders</h3>
-                    <p class="portfolio-card__category">Strona internetowa</p>
+                    <h3 class="portfolio-product__name">Inspiration has no Borders</h3>
+                    <p class="portfolio-product__category">Strona internetowa</p>
                 </figcaption>
             </figure>
-            <figure class="portfolio-card">
-                <div class="portfolio-card__image">
+            <figure class="portfolio-product">
+                <div class="portfolio-product__image">
                     <img src="./images/img-post7.jpg" alt="Otwarty magazyn ilustrowany" height="294" />
-                    <div class="portfolio-card__overlay">
+                    <div class="portfolio-product__overlay">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
                         do celów szpiegowskich i ataków na niezabezpieczone serwery
@@ -200,14 +200,14 @@
                     </div>
                 </div>
                 <figcaption>
-                    <h3 class="portfolio-card__name">Magazyn Limited Edition</h3>
-                    <p class="portfolio-card__category">Dizajn</p>
+                    <h3 class="portfolio-product__name">Magazyn Limited Edition</h3>
+                    <p class="portfolio-product__category">Dizajn</p>
                 </figcaption>
             </figure>
-            <figure class="portfolio-card">
-                <div class="portfolio-card__image">
+            <figure class="portfolio-product">
+                <div class="portfolio-product__image">
                     <img src="./images/img-post8.jpg" alt="Biała zawieszka na sznurku" height="294" />
-                    <div class="portfolio-card__overlay">
+                    <div class="portfolio-product__overlay">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
                         do celów szpiegowskich i ataków na niezabezpieczone serwery
@@ -215,15 +215,15 @@
                     </div>
                 </div>
                 <figcaption>
-                    <h3 class="portfolio-card__name">Projekt LAB</h3>
-                    <p class="portfolio-card__category">Marketing</p>
+                    <h3 class="portfolio-product__name">Projekt LAB</h3>
+                    <p class="portfolio-product__category">Marketing</p>
                 </figcaption>
             </figure>
-            <figure class="portfolio-card">
-                <div class="portfolio-card__image">
+            <figure class="portfolio-product">
+                <div class="portfolio-product__image">
                     <img src="./images/img-post9.jpg" alt="Witryna Growing Business otwarta na ekranie laptopa"
                         height="294" />
-                    <div class="portfolio-card__overlay">
+                    <div class="portfolio-product__overlay">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę
                         do celów szpiegowskich i ataków na niezabezpieczone serwery
@@ -231,8 +231,8 @@
                     </div>
                 </div>
                 <figcaption>
-                    <h3 class="portfolio-card__name">Growing Business</h3>
-                    <p class="portfolio-card__category">Aplikacja</p>
+                    <h3 class="portfolio-product__name">Growing Business</h3>
+                    <p class="portfolio-product__category">Aplikacja</p>
                 </figcaption>
             </figure>
         </div>
